--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 Bootstrap_Flask==2.2.0
-Flask==1.1.2
+Flask==2.3.2
 Flask_Bootstrap==3.3.7.1
-Flask_CKEditor==0.4.4.1
+Flask_CKEditor==0.4.6
 Flask_Gravatar==0.5.0
-Flask_Login==0.5.0
-Flask_SQLAlchemy==2.4.4
-Flask_WTF==0.14.3
-SQLAlchemy==1.3.20
-Werkzeug==1.0.1
-WTForms==2.3.3
+Flask_Login==0.6.2
+flask_sqlalchemy==3.0.5
+Flask_WTF==1.1.1
+SQLAlchemy==2.0.19
+Werkzeug==2.3.6
+WTForms==3.0.1
 gunicorn==19.7.1
